// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AfterContent/> render() should render top topics for reviews 1`] = `
<div
  class="topTopicsContainer"
>
  <span
    class="container"
  >
    <span
      class="label"
    >
      <span
        class="material-icons favorite"
      >
        favorite
      </span>
      Top Mentioned Topics
    </span>
  </span>
  <span
    class="topics"
  >
    <div
      class="ui-badge-badge-0cf8 topic ui-badge-uppercase-0cf8"
      data-color="grey"
      data-corner="round"
      data-name="badge"
      data-type="light"
    >
      food
    </div>
    <div
      class="ui-badge-badge-0cf8 topic ui-badge-uppercase-0cf8"
      data-color="grey"
      data-corner="round"
      data-name="badge"
      data-type="light"
    >
      stuff
    </div>
  </span>
</div>
`;

exports[`<AfterContent/> render() should render top topics sections even with no data 1`] = `
<div
  class="topTopicsContainer"
>
  <span
    class="container"
  >
    <span
      class="label"
    >
      <span
        class="material-icons favorite"
      >
        favorite
      </span>
      Top Mentioned Topics
    </span>
  </span>
  <span
    class="topics"
  />
</div>
`;

exports[`<TitleWrapper/> render() should render header total reviews 1`] = `
<span
  class="container"
>
  <span
    class="material-icons star"
  >
    chat_bubble
  </span>
  <span>
    Reviews
  </span>
  <div
    class="ui-badge-badge-0cf8 pill ui-badge-uppercase-0cf8"
    data-color="grey"
    data-corner="round"
    data-name="badge"
    data-type="dark-grey"
  >
    2
  </div>
</span>
`;
